[workspace]
members = [
    "core",
    "cli",
    "lsp/nls",
    "lsp/lsp-harness",
    "utils",
    "wasm-repl",
    "pyckel",
]
resolver = "2"

[workspace.package]
version = "1.6.0"
authors = ["The Nickel Team <nickel-lang@protonmail.com>"]
license = "MIT"
edition = "2021"
keywords = ["configuration", "language", "nix", "nickel"]
repository = "https://github.com/tweag/nickel"
homepage = "https://nickel-lang.org"
readme = "README.md"

[workspace.dependencies]
nickel-lang-core = { version = "0.7.0", path = "./core", default-features = false }
nickel-lang-utils = { version = "0.1.0", path = "./utils" }
lsp-harness = { version = "0.1.0", path = "./lsp/lsp-harness" }

# The wasm-bindgen version is pinned using `=` since flake.nix reads the version
# number from Cargo.lock and needs to have matching output hashes for the source
# derivation. Combined with caching this would leed to silent inconsistent builds
# if this version changes without the nix output hashes being updated. It's okay
# to bump the version (for example if not doing so prevents some dependency from
# building) but flake.nix needs to be kept in sync.
wasm-bindgen = "=0.2.91"

ansi_term = "0.12"
anyhow = "1.0"
assert_cmd = "2.0.11"
assert_matches = "1.5.0"
bincode = "1.3.3"
clap = "4.3"
clap_complete = "4.3.2"
codespan = { version = "0.11", features = ["serialization"] }
codespan-reporting = { version = "0.11", features = ["serialization"] }
comrak = "0.17.0"
criterion = "0.4"
crossbeam = "0.8.4"
csv = "1"
cxx = "1.0"
cxx-build = "1.0"
derive_more = "0.99"
directories = "4.0.1"
env_logger = "0.10"
git-version = "0.3.5"
indexmap = "1.9.3"
indoc = "2"
insta = "1.29.0"
js-sys = "0.3"
lalrpop = "0.20.2"
lalrpop-util = "0.20.2"
lazy_static = "1"
log = "0.4"
logos = "0.12"
lsp-server = "0.7"
lsp-types = "0.95"
malachite = "0.4"
malachite-q = "0.4"
md-5 = "0.10.5"
once_cell = "1.17.1"
pprof = "0.11.1"
pkg-config = "0.3.27"
pretty = "0.11.3"
pretty_assertions = "1.3.0"
pyo3 = "0.17.3"
pyo3-build-config = "0.17.3"
regex = "1"
rustyline = "11.0"
rustyline-derive = "0.8.0"
scopeguard = "1.2.0"
serde = "1.0.164"
serde_json = "1.0.96"
serde_repr = "0.1"
serde-wasm-bindgen = "0.5.0"
serde_yaml = "0.9.19"
sha-1 = "0.10.0"
sha2 = "0.10.6"
similar = "2.2.1"
simple-counter = "0.1.0"
strip-ansi-escapes = "0.2.0"
termimad = "0.23.1"
test-generator = "0.3.1"
thiserror = "1.0.44"
toml = "0.7.2"
typed-arena = "2.0.2"
unicode-segmentation = "1.10.1"
void = "1"

metrics = "0.21"
metrics-util = "0.15"

topiary-core = { git = "https://github.com/tweag/topiary.git", rev = "82a94a9f57104b89d4316afaeeab271cc51f7698", package = "topiary-core" }
topiary-queries = { git = "https://github.com/tweag/topiary.git", rev = "82a94a9f57104b89d4316afaeeab271cc51f7698", package = "topiary-queries", default-features = false, features = ["nickel"] }
# This should be kept in sync with the revision in topiary
tree-sitter-nickel = { git = "https://github.com/nickel-lang/tree-sitter-nickel", rev = "58baf89db8fdae54a84bcf22c80ff10ee3f929ed" }
tempfile = "3.5.0"

[profile.dev.package.lalrpop]
opt-level = 3

[profile.release.package.lalrpop]
opt-level = 3
