[workspace]
members = [
    "cli",
    "core",
    "flock",
    "git",
    "lsp/lsp-harness",
    "lsp/nls",
    "nickel",
    "package",
    "parser",
    "py-nickel",
    "utils",
    "vector",
    "wasm-repl",
]
resolver = "2"

[workspace.package]
version = "1.15.1"
authors = ["The Nickel Team <nickel-lang@protonmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.85"
keywords = ["configuration", "language", "nix", "nickel"]
repository = "https://github.com/tweag/nickel"
homepage = "https://nickel-lang.org"
readme = "README.md"

[workspace.dependencies]
nickel-lang-core = { version = "0.16.1", path = "./core", default-features = false }
nickel-lang-flock = { version = "0.1.0", path = "./flock" }
nickel-lang-git = { version = "0.2.1", path = "./git" }
nickel-lang-package = { version = "0.5.1", path = "./package" }
nickel-lang-parser = { version = "0.1.1", path = "./parser" }
nickel-lang-vector = { version = "0.1.0", path = "./vector" }
nickel-lang-utils = { version = "0.1.0", path = "./utils" }
lsp-harness = { version = "0.1.0", path = "./lsp/lsp-harness" }

# The wasm-bindgen version is pinned using `=` since flake.nix reads the version
# number from Cargo.lock and needs to have matching output hashes for the source
# derivation. Combined with caching this would lead to silent inconsistent builds
# if this version changes without the nix output hashes being updated. It's okay
# to bump the version (for example if not doing so prevents some dependency from
# building) but flake.nix needs to be kept in sync.
wasm-bindgen = "=0.2.100"

anstyle = "1.0.13"
anyhow = "1.0.97"
assert_cmd = "2.0.11"
assert_matches = "1.5.0"
base64 = "0.22.1"
bincode = "2.0"
clap = "4.5"
clap_complete = "4.5"
codespan = { version = "0.13", features = ["serialization"] }
codespan-reporting = { version = "0.13", features = ["serialization"] }
colorchoice = "1.0"
comrak = "0.36"
criterion = "0.5"
crossbeam = "0.8.4"
csv = "1"
cxx = "1.0"
cxx-build = "1.0"
directories = "6"
env_logger = "0.10"
git-version = "0.3"
gix = "0.74.1"
gix-hash = "0.20.1"
glob = "0.3.2"
indexmap = "2.8"
indoc = "2"
insta = "1.42"
js-sys = "0.3"
json_scanner = "0.1.0"
lalrpop = "0.22.1"
lalrpop-util = "0.22.1"
lazy_static = "1"
libc = "0.2.171"
libtest-mimic = "0.8.1"
log = "0.4"
logos = "0.15"
lsp-server = "0.7"
lsp-types = "0.95"
malachite = "0.6"
malachite-q = "0.6"
md-5 = "0.10.6"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
once_cell = "1.21.1"
ouroboros = "0.18.5"
pprof = "0.14.0"
pkg-config = "0.3.32"
pretty = "0.12.4"
pretty_assertions = "1.4.1"
pubgrub = "0.3.0"
pyo3 = "0.24"
pyo3-build-config = "0.24"
regex = "1"
rustyline = "15.0"
rustyline-derive = "0.11.0"
saphyr-parser = "0.0.6"
scopeguard = "1.2.0"
serde = "1.0.164"
serde_json = "1.0.140"
serde_repr = "0.1"
serde-wasm-bindgen = "0.6.5"
serde_with = { version = "3.12.0", default-features = false, features = ["macros"] }
serde_yaml = "0.9.19"
sha-1 = "0.10.0"
sha2 = "0.10.8"
similar = "2.7.0"
simple-counter = "0.1.0"
smallvec = "1.14.0"
strip-ansi-escapes = "0.2.1"
termimad = "0.31.2"
test-generator = "0.3.1"
thiserror = "2.0.12"
toml = "0.9"
toml_edit = "0.23"
typed-arena = "2.0.2"
unicode-segmentation = "1.12.0"
bumpalo = "3.17.0"
windows-sys = "0.59"

metrics = "0.24"
metrics-util = "0.19"

topiary-core = "0.6"
topiary-queries = { version = "0.6", default-features = false, features = ["nickel"] }
tree-sitter-nickel = "0.5.0"
tempfile = "3.19.0"

strsim = "0.11"
semver = { version = "1.0", features = ["serde"] }

arbitrary = { version = "1.4", features = ["derive"] }
arbtest = "0.3"
rpds = "1.1.0"
imbl-sized-chunks = "0.1"

paste = "1.0"

[profile.dev.package.lalrpop]
opt-level = 3

[profile.release.package.lalrpop]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
