[package]
name = "nickel-lang-cli"
description = "The Nickel interpreter CLI"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
readme.workspace = true

[[bin]]
name = "nickel"
path = "src/main.rs"
bench = false

[features]
default = ["repl", "doc", "format"]
repl = ["nickel-lang-core/repl"]
doc = ["nickel-lang-core/doc", "comrak"]
format = ["nickel-lang-core/format", "dep:tempfile"]
metrics = ["dep:metrics", "dep:metrics-util", "nickel-lang-core/metrics"]
nix-experimental = ["nickel-lang-core/nix-experimental"]

[dependencies]
nickel-lang-core = { workspace = true, features = [ "markdown", "clap" ], default-features = false }
# TODO: make optional
nickel-lang-package.workspace = true
gix = { workspace = true, features = ["blocking-http-transport-reqwest-rust-tls"]}
# TODO: use the version parsing in nickel-lang-package instead
semver = { version = "1.0.23", features = ["serde"] }

clap = { workspace = true, features = ["derive", "string"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
directories.workspace = true

tempfile = { workspace = true, optional = true }

git-version = { workspace = true }
clap_complete = { workspace = true }

metrics = { workspace = true, optional = true }
metrics-util = { workspace = true, optional = true }

comrak = { workspace = true, optional = true }
once_cell.workspace = true
regex.workspace = true

[dev-dependencies]
nickel-lang-utils.workspace = true
test-generator.workspace = true
insta = { workspace = true, features = ["filters"] }
