[package]
name = "nickel-lang-git"
description = "Git utility functions for internal use in the Nickel configuration language"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
bench = false

[dependencies]
anyhow.workspace = true
gix = { workspace = true, features = ["blocking-network-client", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
gix = { workspace = true, features = ["blocking-http-transport-reqwest-rust-tls"] }
