[package]
name = "nickel-lang"
description = "The Nickel interpreter CLI"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "nickel"
path = "bin/nickel.rs"
bench = false

[features]
default = ["repl", "doc"]
repl = ["nickel-lang-lib/repl"]
doc = ["nickel-lang-lib/doc"]

[dependencies]
nickel-lang-lib = { version = "1.0.0", path = "../nickel-lang-lib", features = [ "markdown" ], default-features = false }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0.154", features = ["derive"] }

directories = "4.0.1"

[dev-dependencies]
nickel-lang-utilities = { version = "1.0.0", path = "../utilities" }
test-generator = "0.3.1"
insta = { version = "1.28.0", features = ["filters"] }
