[package]
name = "nickel-repl"
readme = "README.md"
description = "WebAssembly REPL for the Nickel programming language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
nickel-lang-lib = {default-features = false, path = "../nickel-lang-lib", version = "1.0.0", features=["repl-wasm"]}

[lib]
crate-type = ["cdylib", "rlib"]
