[package]
name = "nickel-lang-package"
description = "The Nickel Package Manager (npm)"
version.workspace = true

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]

[dependencies]
anyhow.workspace = true
directories.workspace = true
gix.workspace = true
gix-hash = { workspace = true, features = ["serde"] }
nickel-lang-core = { workspace = true, default-features = false }
nickel-lang-flock.workspace = true
nickel-lang-git.workspace = true
regex.workspace = true
semver = { version = "1.0.23", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempfile = { workspace = true }
thiserror.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Console",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
]

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
gix = { workspace = true, features = ["blocking-http-transport-reqwest-rust-tls"]}
glob.workspace = true
libtest-mimic.workspace = true
nickel-lang-utils.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false
