[package]
name = "nickel-lang-package"
description = "Utility library for the Nickel Package Manager"
version = "0.3.0"

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]

[dependencies]
anyhow.workspace = true
directories.workspace = true
gix.workspace = true
gix-hash = { workspace = true, features = ["serde"] }
nickel-lang-core = { workspace = true, default-features = false }
nickel-lang-flock.workspace = true
nickel-lang-git.workspace = true
pubgrub.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempfile = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
gix = { workspace = true, features = ["blocking-http-transport-reqwest-rust-tls"]}
glob.workspace = true
libtest-mimic.workspace = true
nickel-lang-utils.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false
