[package]
name = "pyckel"
readme = "README.md"
description = "Python bindings for the Nickel programming language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
nickel-lang-core = {default-features = false, path = "../core", version = "0.1" }
pyo3 = { version = "0.17.3", features = ["extension-module"] }
codespan-reporting = "0.11"

[lib]
crate-type = ["cdylib", "rlib"]
