[package]
name = "pyckel"
readme = "README.md"
description = "Python bindings for the Nickel programming language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
nickel-lang-core = { workspace = true, default-features = false }
pyo3 = { workspace = true, features = ["extension-module"] }
codespan-reporting.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
